--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 
        <div class="contenedor">
 
-           <!-- <a href=""> <div class="tarea 1">
+           <!--a <a href=""> <div class="tarea 1">
                 <h1>calculadora</h1>
                 <p class="oculto"></p>
 
