cambio de nombre

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -39,7 +39,7 @@
                     <input type="button" value="7" class="Botones numeros" onclick="agregar(7)">
                     <input type="button" value="8" class="Botones numeros" onclick="agregar(8)">
                     <input type="button" value="9" class="Botones numeros" onclick="agregar(9)">
-                    <input type="button" value="x" class="Botones operaciones" onclick="agregar('+')">
+                    <input type="button" value="x" class="Botones operaciones" onclick="agregar('*')">
 
                     <input type="button" value="4" class="Botones numeros" onclick="agregar(4)">
                     <input type="button" value="5" class="Botones numeros" onclick="agregar(5)">
