--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
-    <title>Document</title>
+    <title>Proyecto</title>
 </head>
 <body>
 
@@ -20,42 +20,7 @@
 
        <div class="contenedor">
 
-           <!-- <a href=""> <div class="tarea 1">
-                <h1>calculadora</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a>
-           <a href=""> <div class="tarea 2">
-                <h1>Conciertos</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a>
-          <a href="">  <div class="tarea 3">
-                <h1>Disney+</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a>
-           <a href=""> <div class="tarea 4">
-                <h1>Twitter</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a>
-           <a href=""> <div class="tarea 5">
-                <h1>Flexbox</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a>
-           <a href=""> <div class="tarea 6">
-                <h1>Tienda</h1>
-                <p class="oculto"></p>
-
-            </div>
-            </a> -->
+         
 
             <div class="card">
                 <div class="circle"></div>
@@ -72,7 +37,7 @@
                 <div class="content">
                     <h2>Calculadora</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
-                    <a href="/disney+/">Ver</a>
+                    <a href="/Calculadora/index.html">Ver</a>
                 </div>
                 <img src="/img/calculadora.png" alt="">
             </div>
