--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
             <div class="content">
                 <h2>Flexblox</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
-                <a href="#">Ver</a>
+                <a href="Flexbox/index.html">Ver</a>
             </div>
             <img src="img/flexbox.png" alt="">
         </div>
