--- a/conciertos/conciertos/bandas.html
+++ b/conciertos/conciertos/bandas.html
@@ -20,19 +20,19 @@
     </header>
     <h1>BANDAS</h1>
     <div class="imgbanda">
-        <img src="img.jpg">
+        <img src="./img/p1.jpg">
     </div>
     <div class="imgbanda">
-        <img src="img.jpg">
+        <img src="./img/p1.jpg">
     </div>
     <div class="imgbanda">
-        <img src="img.jpg">
+        <img src="./img/p1.jpg">
     </div>
     <div class="imgbanda">
-        <img src="img.jpg">
+        <img src="./img/p1.jpg">
     </div>
     <div class="imgbanda">
-        <img src="img.jpg">
+        <img src="./img/p1.jpg">
     </div>
 </body>
 </html>
