--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Disney+</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Replicamos Disney+</p>
                 <a href="/disney+/">Ver</a>
             </div>
             <img src="img/logo.png" alt="">
