--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             <div class="content">
                 <h2>Disney+</h2>
                 <p>Replicamos Disney+</p>
-                <a href="/disney+/">Ver</a>
+                <a href="disney+/index.html">Ver</a>
             </div>
             <img src="img/logo.png" alt="">
         </div>
@@ -37,7 +37,7 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Calculadora</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Creamos una calculadora con html, css y js, tambien le dimos cambio de color </p>
                 <a href="/Calculadora/index.html">Ver</a>
             </div>
             <img src="img/calculadora.png" alt="">
@@ -47,7 +47,7 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Conciertos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Replicamos una pagina de compra de conciertos</p>
                 <a href="/conciertos/conciertos/index.html">Ver</a>
             </div>
             <img src="img/conciertos.png" alt="">
@@ -57,7 +57,7 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Twitter</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Intentamos hacer una replica de la interfaz grafica de twitter solo ocupando css y html</p>
                 <a href="/twitter/index.html">Ver</a>
             </div>
             <img src="img/twitter logo.png" alt="">
@@ -67,7 +67,7 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Flexblox</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Cuando estabamos aprendiendo flexbox hicimos esta actividad para ver como funcionaba</p>
                 <a href="Flexbox/index.html">Ver</a>
             </div>
             <img src="img/flexbox.png" alt="">
@@ -77,10 +77,20 @@
             <div class="circle"></div>
             <div class="content">
                 <h2>Tienda</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, autem.</p>
+                <p>Replicamos una tienda basica para ver mas del funcionamiento de js </p>
                 <a href="/tienda/index.html">Ver</a>
             </div>
             <img src="img/tienda.png" alt="">
+        </div>
+
+        <div class="card">
+            <div class="circle"></div>
+            <div class="content">
+                <h2>Local Storage</h2>
+                <p>Hicimos una practica basica para aprender que es el local storage</p>
+                <a href="local storage/index.html">Ver</a>
+            </div>
+            <img src="img/locaStorage.png" alt="">
         </div>
 </body>
 </html>
